--- a/hovg.html
+++ b/hovg.html
@@ -1,5 +1,56 @@
 <html>
+
   <Head>
+
     <title>Video Games Lab</title>
+
   </head>
+
+  <body>
+
+    <h1>History of Video Games</h1>
+
+      <p>Video games are digital games that can be played on a computer device (e.g., tablets, smartphones, laptops, consoles, etc.).
+Originally designed simply for entertainment, video games have grown into their own industry and field of learning,
+generating billions of dollars each year.</p>
+"All your base are belong to us"
+
+    <h2>The Beginning (1950s)</h2>
+
+      <ul>
+
+        <li> The first computerized Video Game made was tic-tac-toe called Bertie the brain in 1950</li>
+
+        <li>October 1958, A Physicist named William Higinbotham Makes a tennis video game similar to the video game Pong</li>
+
+        <li>Another game with physics called SpaceWar! Is made in about 1959-1962</li>
+
+      </ul>
+
+    <h2>Video Games at Home (1960-1983)</h2>
+
+      <ul>
+
+        <li>In 1966 a man named Ralph Baer with a few friends made “the Brown Box” and was a prototype for the very first multiplayer and first multiprogram video game. The company he was working for, Sanders Associates Inc. licensed the system to Magnavox</li>
+
+        <li>In 1972 Magnavox Releases the design as the Magnavox Odyssey</li>
+
+        <li>1975 Atari’s game system is made. Its first game being PONG</li>
+
+      </ul>
+
+    <h2>North American Video Game Crash (1983)</h2>
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/QmNqsui0O0s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <h2>The Rise of Games in the East (1985-1995)</h2>
+
+    <h2>Tech Company Takeover (1995-2010)</h2>
+
+    <h2>Today in Gaming (2010-Now)</h2>
+
+    <h2>Useful Websites</h2>
+
+  </body>
+
 </html>
