--- a/hovg.html
+++ b/hovg.html
@@ -55,6 +55,23 @@ generating billions of dollars each year.</p>
 
     <h2>Useful Websites</h2>
 
+      <p>
+  
+        <a href="https://americanhistory.si.edu/collections/object-groups/the-father-of-the-video-game-the-ralph-baer-prototypes-and-electronic-games">American History</a>
+
+      </p>
+
+      <p>
+
+        <a href="http://factmyth.com/factoids/the-first-video-games-were-from-the-50s/">Fact Myth</a>
+      
+      </p>
+
+      <p>
+
+        <a href="https://www.bugsplat.com/articles/video-games/great-video-game-crash-1983">BugSplat</a>
+
+      </p>
   </body>
 
 </html>
